After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689381 - Fix issues with the GnomeIdleMonitor port
Fix issues with the GnomeIdleMonitor port
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-30 22:18 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-11-30 22:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix issues with the GnomeIdleMonitor port (3.31 KB, patch)
2012-11-30 22:18 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-11-30 22:18:33 UTC
All of these issues were solved in the "Port to GnomeIdleMonitor" patch
I attached to the original bug. This is why you never cast anything.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-11-30 22:18:34 UTC
Created attachment 230354 [details] [review]
Fix issues with the GnomeIdleMonitor port

Bastien ported this incorrectly, relying on a "condition" argument
to be passed to the callback function that never existed.
Comment 2 Ray Strode [halfline] 2012-11-30 22:49:31 UTC
Review of attachment 230354 [details] [review]:

k
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-11-30 22:51:17 UTC
Attachment 230354 [details] pushed as 92e0959 - Fix issues with the GnomeIdleMonitor port