Fix issues with the GnomeIdleMonitor port

Bastien ported this incorrectly, relying on a "condition" argument
to be passed to the callback function that never existed.

https://bugzilla.gnome.org/show_bug.cgi?id=689381